Bug 1598782 - Don't destroy GeckoEditableSupport when getting focus. r=geckoview-reviewers,rbarker

NOTIFY_IME_OF_FOCUS performs lazy initialization for text dispatcher. When
GeckoViewSupport attaches GeckoEditable during initialization,
GeckoEditableSupport destroys myself.

If GeckoEditable already has focus, don't destroy GeckoEditable child.

Also, I want to add debug warning to debug like this issue.

Differential Revision: https://phabricator.services.mozilla.com/D55914